# FlashFunk

./: .gitignore  Cargo.toml  README.md  build.rs  install.md  readme.md  simnow.json  simnow_h.json
.github/workflows/: rust.yml
auto_generate/: generator.py
core/: Cargo.toml
core/benches/: async_channel.rs  channel.rs
core/src/: api.rs  builder.rs  lib.rs  strategy.rs  worker.rs
core/src/util/: cache_padded.rs  channel.rs  fx_hasher.rs  mod.rs  no_hasher.rs  spin.rs  spmc.rs  spsc.rs  stack_array.rs
core/src/util/async_runtime/: mod.rs  park.rs  runtime.rs  waker.rs
examples/: Cargo.toml  backtest_config  backtest_demo.rs  call.rs  login.rs  rt.rs
examples/src/: log.rs  websocket.rs
flashfunk-codegen/: Cargo.toml
flashfunk-codegen/src/: lib.rs
flashfunk-core/: Cargo.toml  build.rs
flashfunk-core/examples/: backtest_demo.rs  call.rs
flashfunk-core/src/: ac.rs  account.rs  api.rs  app.rs  builder.rs  context.rs  data_collect.rs  interface.rs  lib.rs  mock.rs  process.rs  strategy.rs  structs.rs  timer.rs  worker.rs
flashfunk-core/src/ctp/: func.rs  md_api.rs  td_api.rs  wrapper.hpp
flashfunk-core/src/ctp/src/: ctp.cpp  ctp_md.hpp  ctp_td.hpp
flashfunk-core/src/types/: message.rs
flashfunk-core/src/util/: channel.rs  mock.rs  mod.rs  spsc.rs  stack_array.rs  time.rs
flashfunk-fetcher/: Cargo.toml  readme.md
flashfunk-fetcher/src/: fetch.rs  lib.rs  model.rs
flashfunk-interface/: Cargo.toml  readme.md
flashfunk-interface/src/ctp/: md_api.rs  mod.rs  sys.rs
flashfunk-level/: Cargo.toml  build.rs  readme.md
flashfunk-level/benches/: ctp_tick.rs
flashfunk-level/benchmark/: search_compare.rs  tick_generation.rs
flashfunk-level/sdk_sources/ees/include/: EESQuoteApi.h  EesTraderErr.h
flashfunk-level/sdk_sources/rohon/include/: ThostFtdcUserApiStruct.h
flashfunk-level/src/: c_func.rs  constant.rs  context.rs  data_type.rs  interface.rs  lib.rs
flashfunk-level/src/ctp/: CtpMd.rs  CtpTd.rs  func.rs  md_api.rs  mdapi.rs  mod.rs  sys.rs  td_api.rs  tdapi.rs
flashfunk-level/src/ctp/src/: CtpMd.hpp  CtpTd.hpp  ctp.cpp  ctp_md.hpp  ctp_td.hpp
flashfunk-level/src/ctpmini/: CtpMiniMd.rs  CtpMiniTd.rs  market.rs  mod.rs  sys.rs  wrapper.hpp
flashfunk-level/src/ctpmini/src/: CtpMiniMd.hpp  CtpMiniTd.hpp  ctpmini.cpp
flashfunk-level/src/types/: message.rs
flashfunk-level/src/util/: channel.rs  mod.rs  time.rs
level/: Cargo.toml  build.rs
level/benchmark/: tick_generation.rs
level/sdk_sources/: readme.md
level/sdk_sources/ees/include/: EesTraderApi.h
level/src/: c_func.rs  context.rs  data_type.rs  interface.rs  lib.rs
level/src/ctp/: CtpMd.rs  CtpTd.rs  mdapi.rs  mod.rs  sys.rs  tdapi.rs  wrapper.hpp
level/src/ctp/src/: CtpTd.hpp
level/src/ctpmini/: CtpMiniMd.rs  CtpMiniTd.rs
level/src/ctpmini/src/: CtpMiniMd.hpp  CtpMiniTd.hpp  ctpmini.cpp
level/src/types/: message.rs
level/src/util/: hash.rs  mod.rs  spsc.rs  time.rs
log/: Cargo.toml
log/src/: async_impl.rs  lib.rs  no_op.rs  value.rs
sdk_sources/: readme.md
sdk_sources/ctp/include/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
sdk_sources/ees/include/: EESQuoteApi.h  EESQuoteDefine.h  EesTraderApi.h  EesTraderDefine.h  EesTraderErr.h
sdk_sources/ees/lib/: EESQuoteApi.lib  EESTraderApi.lib
src/: ac.rs  account.rs  app.rs  builder.rs  constant.rs  constants.rs  context.rs  ctp.rs  enums.rs  interface.rs  lib.rs  structs.rs  utility.rs  worker.rs
src/ctp/: api.rs  bindings.rs  ctp_struct.rs  func.rs  md_api.rs  sys.rs  td_api.rs  wrapper.hpp
src/ctp/src/: ctp.cpp  ctp_md.hpp  ctp_td.hpp  re.hpp
src/types/: message.rs
src/util/: blocker.rs  channel.rs  hash.rs  mock.rs  mod.rs  spsc.rs
timer/: Cargo.toml
timer/examples/: run.rs
timer/src/: lib.rs
tutorial/: 开始.md
