[workspace]
members = [
    "core",
    "examples"
]

[patch.crates-io]
flashfunk-core = { path = "./core" }

xitca-client = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-http = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-io = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-server = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-service = { git = "https://github.com/HFQR/xitca-web.git" }

http-ws = { git = "https://github.com/HFQR/xitca-web.git" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
