[workspace]
resolver = "1"
members = [
    "core",
    "log",
    "examples"
]

[patch.crates-io]
flashfunk-core = { path = "./core" }
owned-log = { path = "./log" }
xitca-client = { git = "https://github.com/HFQR/xitca-web/" }
http-ws = { git = "https://github.com/HFQR/xitca-web/" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
