[package]
name = "flashfunk-core"
version = "0.5.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2021"

[[bench]]
name = "channel"
path = "benches/channel.rs"
harness = false

[features]
default = ["std"]
std = ["core_affinity"]
# optional feature for small symbol type less than 8 bytes
small-symbol = []
async = ["std", "futures-core", "parking"]

[dependencies]
cache-padded = "1.1.1"

# core affinity support
core_affinity = { version = "0.5.10", optional = true }

# async feature support
futures-core = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
parking = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.3.4"
