[package]
name = "flashfunk-core"
version = "0.6.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2021"

[[bench]]
name = "channel"
path = "benches/channel.rs"
harness = false

[features]
default = ["std"]
# feature can be used together with rust standard library.
std = ["core_affinity"]
# optional feature for small symbol type less than 8 bytes
small-symbol = []
# support for strategy and worker async communcation.
async = ["std", "futures-core", "parking"]

[dependencies]
core_affinity = { version = "0.8", optional = true }

futures-core = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
parking = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.5"
