[package]
name = "flashfunk-core"
version = "0.6.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2021"

[[bench]]
name = "channel"
path = "benches/channel.rs"
harness = false

[features]
default = ["std"]
std = ["core_affinity"]
async = ["std", "futures-core", "parking"]

[dependencies]
crossbeam-utils = "0.8"
core_affinity = { version = "0.8", optional = true }
# async feature support
futures-core = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
parking = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.4"
