[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "websocket"
path = "./src/websocket.rs"

[[example]]
name = "log"
path = "./src/log.rs"

[dependencies]
flashfunk-core = { version = "0.5", features = ["async"] }
owned-log = { version = "0.1", features = ["async"] }

futures-util = "0.3.17"
tokio = { version = "1.13", features = ["macros", "rt"] }
xitca-client = { version = "0.1", features = ["rustls", "websocket"] }
