[package]
name = "flashfunk-core"
version = "0.5.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.4.5"
chrono = { version = "0.4.13", default-features = false, features = ["clock"] }
core_affinity = "0.5.10"
encoding = "0.2.33"
libc = "0.2.0"
flashfunk-level = { path = "../flashfunk-level", features = ["ctpmini"] }
async-trait = ""
chrono-tz = { version = "0.5", features = ["serde"] }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs/", branch = "async-await" }
futures = "0.3.8"
tokio = { version = "1.5"}
once_cell = ""

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false
panic = "abort"


[[example]]
name = "backtest"
path = "../examples/backtest_demo.rs"
