[package]
name = "flashfunk-core"
version = "0.5.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = ["core_affinity"]

[dependencies]
ahash = { version = "0.7", features = ["compile-time-rng"] }
cache-padded = "1.1.1"
core_affinity = { version = "0.5.10", optional = true }
