[package]
name = "flashfunk-fetcher"
version = "0.1.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2018"
description = "This project are used to fetch history tick data from clickhouse database"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = "0.4"
chrono-tz = { version = "0.5", features = ["serde"] }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs/" }
futures = "0.1.29"
tokio = "0.1.22"
