[package]
name = "timer"
version = "0.1.0"
authors = ["somewheve <somewheve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", default-features = false, features = ["clock"] }



[[example]]
name = "run"